--- a/Rick-Player.Main/Rick-Player.Main.csproj
+++ b/Rick-Player.Main/Rick-Player.Main.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Rick_Player.Main</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.1.8" />
+  </ItemGroup>
+
 </Project>
