--- a/Rick-Player.Main/Rick-Player.Main.csproj
+++ b/Rick-Player.Main/Rick-Player.Main.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="MudBlazor" Version="6.1.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components" />
+    <Folder Include="NewDirectory1" />
+    <Folder Include="Services" />
+  </ItemGroup>
+
 </Project>
