Adicionando para pasta Data as seguintes class, Client, Track e Vote. Para começar a criar components.

--- a/Rick-Player.Main/Rick-Player.Main.csproj
+++ b/Rick-Player.Main/Rick-Player.Main.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>Rick_Player.Main</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.1.8" />
+    <PackageReference Include="MudBlazor.ThemeManager" Version="1.0.7" />
+  </ItemGroup>
+
 </Project>
