Varias alterações de layout e regras

--- a/Rick-Player.Main/Rick-Player.Main.csproj
+++ b/Rick-Player.Main/Rick-Player.Main.csproj
@@ -19,4 +19,8 @@
     <Compile Remove="Services\ResquestAPI\YoutubeManagerTeste.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Pages\Index.razor" />
+  </ItemGroup>
+
 </Project>
